--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,6 @@
 {
     "name": "nox0121/helloworld",
     "description": "A Hello Wolrd Test Package",
-    "type": "library",
-    "require": {
-        "php": ">=5.6.0",
-        "illuminate/database": "^5.2.0"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -13,10 +8,24 @@
             "email": "nox.gr.wang@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "require": {
+        "php": ">=7.0"
+    },
+    "require-dev": {
+        "larapack/dd": "^1.0",
+        "phpunit/phpunit": "^6.5"
+    },
     "autoload": {
         "psr-4": {
-            "Nox0121\\HelloWorld\\": "src/"
+            "Nox0121\\HelloWorld\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Nox0121\\HelloWorld\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
